--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.dll
 *.so
 *.dylib
+bofhchan
 
 # Test binary, built with `go test -c`
 *.test
@@ -11,6 +12,5 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# pkger
 cmd/bofhchan/pkged.go
